--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 </head>
 <body>
     <header>
-        <img src="logo.png" alt="HAFC Logo" />
+        <img src="image.png" alt="HAFC Logo" />
         <h1>HAFC</h1>
         <p>Your Link to Better Health</p>
     </header>
