--- a/index.html
+++ b/index.html
@@ -73,3 +73,20 @@
     </footer>
 </body>
 </html>
+<section style="background:#fff; padding:60px 20px; text-align:center; border-top:1px solid #eee;">
+  <h2>Why Coaches Love HAFC</h2>
+  <div style="display:flex; flex-wrap:wrap; justify-content:center; gap:40px; margin-top:40px;">
+    <div style="max-width:220px;">
+      <h3>📍 Location-Based Discovery</h3>
+      <p>Get discovered by clients near you—or anywhere online.</p>
+    </div>
+    <div style="max-width:220px;">
+      <h3>💬 Instant Bookings</h3>
+      <p>Clients can view your calendar and book you instantly.</p>
+    </div>
+    <div style="max-width:220px;">
+      <h3>🧰 Built for Coaches</h3>
+      <p>Zero setup costs, just sign up and start getting clients.</p>
+    </div>
+  </div>
+</section>
