--- a/index.html
+++ b/index.html
@@ -1,153 +1,135 @@
+
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HAFC - Your Link to Better Health</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background: #f9f9f9;
-            color: #333;
-        }
-        header {
-            background: #ffffff;
-            padding: 40px 20px;
-            text-align: center;
-            border-bottom: 1px solid #ddd;
-        }
-        header img {
-            width: 120px;
-            margin-bottom: 10px;
-        }
-        header h1 {
-            margin: 10px 0 5px;
-            font-size: 2em;
-        }
-        header p {
-            margin: 0;
-            font-size: 1.1em;
-            color: #666;
-        }
-        section {
-            padding: 60px 20px;
-            text-align: center;
-        }
-        section h2 {
-            font-size: 1.8em;
-            margin-bottom: 20px;
-        }
-        .cta {
-            display: inline-block;
-            margin-top: 20px;
-            padding: 15px 30px;
-            background: #2c9f9f;
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
-        }
-        footer {
-            padding: 20px;
-            text-align: center;
-            background: #eee;
-            font-size: 0.9em;
-        }
-        .features {
-            background: #fff;
-            padding: 60px 20px;
-            border-top: 1px solid #eee;
-        }
-        .feature-boxes {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 40px;
-            margin-top: 40px;
-        }
-        .feature {
-            max-width: 220px;
-        }
-        .testimonial {
-            background: #f1f1f1;
-            padding: 40px 20px;
-            margin-top: 40px;
-        }
-        .signup-form {
-            background: #ffffff;
-            padding: 40px 20px;
-            text-align: center;
-            border-top: 1px solid #ddd;
-        }
-        input[type="email"] {
-            padding: 10px;
-            font-size: 1em;
-            width: 300px;
-            max-width: 90%;
-            margin-top: 10px;
-        }
-        input[type="submit"] {
-            padding: 10px 20px;
-            font-size: 1em;
-            margin-top: 10px;
-            background: #2c9f9f;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-    </style>
+  <title>HAFC - Your Link to Better Health</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f9f9f9;
+      color: #333;
+      text-align: center;
+    }
+    header {
+      padding: 60px 20px;
+      background: #fff;
+      border-bottom: 1px solid #ddd;
+    }
+    h1 {
+      margin: 0;
+      font-size: 2.5em;
+    }
+    p {
+      font-size: 1.2em;
+      margin-top: 10px;
+      color: #666;
+    }
+    .cta {
+      display: inline-block;
+      margin-top: 30px;
+      padding: 15px 30px;
+      background: #2c9f9f;
+      color: white;
+      text-decoration: none;
+      border-radius: 5px;
+      font-size: 1em;
+    }
+    .features {
+      background: #fff;
+      padding: 60px 20px;
+      border-top: 1px solid #eee;
+    }
+    .feature-boxes {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 40px;
+      margin-top: 40px;
+    }
+    .feature {
+      max-width: 220px;
+    }
+    .testimonial {
+      background: #f1f1f1;
+      padding: 40px 20px;
+      margin-top: 40px;
+    }
+    .signup-form {
+      background: #ffffff;
+      padding: 40px 20px;
+      text-align: center;
+      border-top: 1px solid #ddd;
+    }
+    input[type="email"] {
+      padding: 10px;
+      font-size: 1em;
+      width: 300px;
+      max-width: 90%;
+      margin-top: 10px;
+    }
+    input[type="submit"] {
+      padding: 10px 20px;
+      font-size: 1em;
+      margin-top: 10px;
+      background: #2c9f9f;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    footer {
+      padding: 20px;
+      background: #eee;
+      font-size: 0.9em;
+      margin-top: 40px;
+    }
+  </style>
 </head>
 <body>
-    <header>
-        <img src="logo.png" alt="HAFC Logo" />
-        <h1>HAFC</h1>
-        <p>Your Link to Better Health</p>
-    </header>
+  <header>
+    <h1>HAFC</h1>
+    <p>Your Link to Better Health</p>
+    <a href="map.html" class="cta">View Coach Map</a>
+  </header>
 
-    <section>
-        <h2>Connecting You With Local and Online Fitness Professionals</h2>
-        <p>Find a coach, book sessions, and reach your goals – all in one place.</p>
-        <a href="#" class="cta">Get Started for Free</a>
-    </section>
+  <section class="features">
+    <h2>Why Coaches Love HAFC</h2>
+    <div class="feature-boxes">
+      <div class="feature">
+        <h3>📍 Location-Based Discovery</h3>
+        <p>Get discovered by clients near you—or anywhere online.</p>
+      </div>
+      <div class="feature">
+        <h3>💬 Instant Bookings</h3>
+        <p>Clients can view your calendar and book you instantly.</p>
+      </div>
+      <div class="feature">
+        <h3>🧰 Built for Coaches</h3>
+        <p>Zero setup costs, just sign up and start getting clients.</p>
+      </div>
+    </div>
+  </section>
 
-    <section class="features">
-        <h2>Why Coaches Love HAFC</h2>
-        <div class="feature-boxes">
-            <div class="feature">
-                <h3>📍 Location-Based Discovery</h3>
-                <p>Get discovered by clients near you—or anywhere online.</p>
-            </div>
-            <div class="feature">
-                <h3>💬 Instant Bookings</h3>
-                <p>Clients can view your calendar and book you instantly.</p>
-            </div>
-            <div class="feature">
-                <h3>🧰 Built for Coaches</h3>
-                <p>Zero setup costs, just sign up and start getting clients.</p>
-            </div>
-        </div>
-    </section>
+  <section class="testimonial">
+    <h2>What Coaches Are Saying</h2>
+    <p>"HAFC helped me grow my client base faster than anything else I've tried. The platform is super easy to use and my clients love it too!" – Jamie, PT in Melbourne</p>
+  </section>
 
-    <section class="testimonial">
-        <h2>What Coaches Are Saying</h2>
-        <p>"HAFC helped me grow my client base faster than anything else I've tried. The platform is super easy to use and my clients love it too!" – Jamie, PT in Melbourne</p>
-    </section>
+  <section class="signup-form">
+    <h2>Join Our Coach Network</h2>
+    <p>Be among the first to experience the future of health and fitness connection.</p>
+    <form>
+      <input type="email" placeholder="Enter your email" required>
+      <br>
+      <input type="submit" value="Sign Up Now">
+    </form>
+  </section>
 
-    <section class="signup-form">
-        <h2>Join Our Coach Network</h2>
-        <p>Be among the first to experience the future of health and fitness connection.</p>
-        <form>
-            <input type="email" placeholder="Enter your email" required>
-            <br>
-            <input type="submit" value="Sign Up Now">
-        </form>
-    </section>
-
-    <footer>
-        &copy; 2025 HAFC. All rights reserved.
-    </footer>
+  <footer>
+    &copy; 2025 HAFC. All rights reserved.
+  </footer>
 </body>
 </html>
-
