--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
       text-align: center;
       border-bottom: 1px solid #ddd;
     }
+    header img {
+      width: 120px;
+      margin-bottom: 10px;
+    }
     h1 {
       margin: 0;
       font-size: 2.5em;
@@ -53,7 +57,7 @@
       height: 70vh;
     }
     .featured {
-      width: 30%;
+      width: 22%;
       background: #ffffff;
       overflow-y: auto;
       border-right: 1px solid #eee;
@@ -152,174 +156,8 @@
 </head>
 <body>
   <header>
+    <img src="logo.png" alt="HAFC Logo" />
     <h1>HAFC</h1>
     <p>Your Link to Better Health</p>
   </header>
 
-  <div class="filters">
-    <input type="text" placeholder="Search by location" id="search-location">
-    <select id="training-type">
-      <option value="">Training Style</option>
-      <option value="Strength">Strength</option>
-      <option value="Mobility">Mobility</option>
-      <option value="HIIT">HIIT</option>
-    </select>
-    <select id="availability">
-      <option value="">Availability</option>
-      <option value="online">Online</option>
-      <option value="in-person">In-Person</option>
-    </select>
-  </div>
-
-  <div class="main-container">
-    <div class="featured">
-      <h3>Featured Coaches</h3>
-      <div class="coach-card">
-        <strong>Jamie</strong>
-        Strength · In-Person · Melbourne
-      </div>
-      <div class="coach-card">
-        <strong>Taylor</strong>
-        Mobility · Online · Sydney
-      </div>
-      <div class="coach-card">
-        <strong>Alex</strong>
-        HIIT · In-Person · Brisbane
-      </div>
-    </div>
-    <div id="map"></div>
-  </div>
-
-  <section class="features">
-    <h2>Why Coaches Love HAFC</h2>
-    <div class="feature-boxes">
-      <div class="feature">
-        <h3>📍 Location-Based Discovery</h3>
-        <p>Get discovered by clients near you—or anywhere online.</p>
-      </div>
-      <div class="feature">
-        <h3>💬 Instant Bookings</h3>
-        <p>Clients can view your calendar and book you instantly.</p>
-      </div>
-      <div class="feature">
-        <h3>🧰 Built for Coaches</h3>
-        <p>Zero setup costs, just sign up and start getting clients.</p>
-      </div>
-    </div>
-  </section>
-
-  <section class="testimonial">
-    <h2>What Coaches Are Saying</h2>
-    <p>"HAFC helped me grow my client base faster than anything else I've tried. The platform is super easy to use and my clients love it too!" – Jamie, PT in Melbourne</p>
-  </section>
-
-  <section class="signup-form">
-    <h2>Join Our Coach Network</h2>
-    <p>Be among the first to experience the future of health and fitness connection.</p>
-    <form>
-      <input type="email" placeholder="Enter your email" required>
-      <br>
-      <input type="submit" value="Sign Up Now">
-    </form>
-  </section>
-
-  <footer>
-    &copy; 2025 HAFC. All rights reserved.
-  </footer>
-
-  <script>
-    const mapStyle = [
-      {
-        featureType: "all",
-        elementType: "geometry.fill",
-        stylers: [{ weight: "2.00" }]
-      },
-      {
-        featureType: "all",
-        elementType: "geometry.stroke",
-        stylers: [{ color: "#9c9c9c" }]
-      },
-      {
-        featureType: "landscape",
-        elementType: "all",
-        stylers: [{ color: "#f2f2f2" }]
-      },
-      {
-        featureType: "poi",
-        elementType: "all",
-        stylers: [{ visibility: "off" }]
-      },
-      {
-        featureType: "road",
-        elementType: "all",
-        stylers: [{ saturation: -100 }, { lightness: 45 }]
-      },
-      {
-        featureType: "water",
-        elementType: "all",
-        stylers: [{ color: "#c0e4f3" }, { visibility: "on" }]
-      }
-    ];
-
-    const coaches = [
-      { name: "Jamie", lat: -37.8136, lng: 144.9631, type: "In-Person", specialty: "Strength" },
-      { name: "Taylor", lat: -33.8688, lng: 151.2093, type: "Online", specialty: "Mobility" },
-      { name: "Alex", lat: -27.4698, lng: 153.0251, type: "In-Person", specialty: "HIIT" }
-    ];
-
-    let map;
-    let markers = [];
-
-    function initMap() {
-      const center = { lat: -33.8688, lng: 151.2093 };
-      map = new google.maps.Map(document.getElementById("map"), {
-        zoom: 5,
-        center: center,
-        styles: mapStyle
-      });
-      loadMarkers(coaches);
-    }
-
-    function loadMarkers(data) {
-      markers.forEach(marker => marker.setMap(null));
-      markers = [];
-
-      data.forEach(coach => {
-        const marker = new google.maps.Marker({
-          position: { lat: coach.lat, lng: coach.lng },
-          map: map,
-          title: coach.name,
-        });
-
-        const info = new google.maps.InfoWindow({
-          content: `<strong>${coach.name}</strong><br>${coach.specialty}<br>${coach.type}`
-        });
-
-        marker.addListener("click", () => {
-          info.open(map, marker);
-        });
-
-        markers.push(marker);
-      });
-    }
-
-    document.querySelectorAll("#search-location, #training-type, #availability").forEach(el => {
-      el.addEventListener("input", () => {
-        const type = document.getElementById("training-type").value;
-        const avail = document.getElementById("availability").value;
-
-        const filtered = coaches.filter(coach => {
-          return (!type || coach.specialty === type) &&
-                 (!avail || coach.type.toLowerCase() === avail);
-        });
-
-        loadMarkers(filtered);
-      });
-    });
-  </script>
-
-  <script async
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAWxrse2bAtAkZdXOhJN8xpufWmQgjs8m8&callback=initMap">
-  </script>
-</body>
-</html>
