--- a/index.html
+++ b/index.html
@@ -474,3 +474,294 @@
       <p>Your Link to Better Health</p>
     </div>
   </header>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>HAFC - Your Link to Better Health</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Arial', sans-serif;
+      background-color: #eef3f7;
+      color: #333;
+    }
+
+    header {
+      background-color: #eef3f7;
+      padding: 20px 40px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      flex-wrap: wrap;
+    }
+
+    .header-text {
+      flex: 1;
+      min-width: 200px;
+    }
+
+    .header-text h1 {
+      margin: 0;
+      font-size: 2em;
+    }
+
+    .header-text p {
+      margin: 5px 0 0;
+      font-size: 1em;
+      color: #666;
+    }
+
+    .header-logo {
+      flex: 1;
+      text-align: center;
+    }
+
+    .header-logo img {
+      width: 160px;
+      height: auto;
+    }
+
+    .container {
+      display: flex;
+      flex-wrap: wrap;
+      min-height: 600px;
+    }
+
+    .featured {
+      width: 22%;
+      background-color: #fff;
+      padding: 20px;
+      box-shadow: inset -1px 0 0 #ddd;
+      overflow-y: auto;
+    }
+
+    .map-container {
+      width: 78%;
+      height: 600px;
+    }
+
+    #map {
+      width: 100%;
+      height: 100%;
+    }
+
+    .filter-bar {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      padding: 20px 40px;
+      background-color: #fff;
+      border-top: 1px solid #ccc;
+      border-bottom: 1px solid #ccc;
+    }
+
+    .filter-bar select {
+      padding: 8px 12px;
+      font-size: 1em;
+    }
+
+    .feature-section, .testimonial, .signup-form, footer {
+      padding: 40px;
+      background: #fff;
+      text-align: center;
+    }
+
+    .feature-boxes {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 30px;
+      margin-top: 30px;
+    }
+
+    .feature {
+      max-width: 220px;
+    }
+
+    .signup-form input[type="email"] {
+      padding: 10px;
+      font-size: 1em;
+      width: 300px;
+      max-width: 90%;
+      margin: 10px auto;
+    }
+
+    .signup-form input[type="submit"] {
+      padding: 10px 20px;
+      background-color: #2c9f9f;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      margin-top: 10px;
+    }
+
+    footer {
+      background-color: #eef3f7;
+      font-size: 0.9em;
+      color: #666;
+    }
+
+    @media (max-width: 768px) {
+      .container {
+        flex-direction: column;
+      }
+
+      .featured, .map-container {
+        width: 100%;
+        height: 300px;
+      }
+
+      .header-logo, .header-text {
+        text-align: center;
+        width: 100%;
+        margin-bottom: 10px;
+      }
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <div class="header-text">
+      <h1>HAFC</h1>
+      <p>Your Link to Better Health</p>
+    </div>
+    <div class="header-logo">
+      <img src="logo.png" alt="HAFC Logo">
+    </div>
+  </header>
+
+  <div class="filter-bar">
+    <select>
+      <option>Location</option>
+      <option>Sydney</option>
+      <option>Melbourne</option>
+      <option>Brisbane</option>
+    </select>
+    <select>
+      <option>Style</option>
+      <option>Strength</option>
+      <option>Mobility</option>
+      <option>HIIT</option>
+    </select>
+    <select>
+      <option>Availability</option>
+      <option>Morning</option>
+      <option>Afternoon</option>
+      <option>Evening</option>
+    </select>
+  </div>
+
+  <div class="container">
+    <div class="featured">
+      <h3>Featured Coaches</h3>
+      <ul>
+        <li><strong>Jamie</strong><br>Strength – Melbourne</li>
+        <li><strong>Taylor</strong><br>Mobility – Sydney</li>
+        <li><strong>Alex</strong><br>HIIT – Brisbane</li>
+      </ul>
+    </div>
+    <div class="map-container">
+      <div id="map"></div>
+    </div>
+  </div>
+
+  <section class="feature-section">
+    <h2>Why Coaches Love HAFC</h2>
+    <div class="feature-boxes">
+      <div class="feature">
+        <h3>📍 Location-Based Discovery</h3>
+        <p>Get discovered by clients near you—or anywhere online.</p>
+      </div>
+      <div class="feature">
+        <h3>💬 Instant Bookings</h3>
+        <p>Clients can view your calendar and book you instantly.</p>
+      </div>
+      <div class="feature">
+        <h3>🧰 Built for Coaches</h3>
+        <p>Zero setup costs, just sign up and start getting clients.</p>
+      </div>
+    </div>
+  </section>
+
+  <section class="testimonial">
+    <h2>What Coaches Are Saying</h2>
+    <p>"HAFC helped me grow my client base faster than anything else I've tried. The platform is super easy to use and my clients love it too!" – Jamie, PT in Melbourne</p>
+  </section>
+
+  <section class="signup-form">
+    <h2>Join Our Coach Network</h2>
+    <form>
+      <input type="email" placeholder="Enter your email" required>
+      <br>
+      <input type="submit" value="Sign Up Now">
+    </form>
+  </section>
+
+  <footer>
+    &copy; 2025 HAFC. All rights reserved.
+  </footer>
+
+  <script>
+    const mapStyle = [
+      { "elementType": "geometry", "stylers": [{ "color": "#f5f5f5" }] },
+      { "elementType": "labels.icon", "stylers": [{ "visibility": "off" }] },
+      { "elementType": "labels.text.fill", "stylers": [{ "color": "#616161" }] },
+      { "elementType": "labels.text.stroke", "stylers": [{ "color": "#f5f5f5" }] },
+      { "featureType": "administrative.land_parcel", "elementType": "labels", "stylers": [{ "visibility": "off" }] },
+      { "featureType": "poi", "elementType": "geometry", "stylers": [{ "color": "#eeeeee" }] },
+      { "featureType": "poi", "elementType": "labels.text.fill", "stylers": [{ "color": "#757575" }] },
+      { "featureType": "poi.park", "elementType": "geometry", "stylers": [{ "color": "#e5e5e5" }] },
+      { "featureType": "poi.park", "elementType": "labels.text.fill", "stylers": [{ "color": "#9e9e9e" }] },
+      { "featureType": "road", "elementType": "geometry", "stylers": [{ "color": "#ffffff" }] },
+      { "featureType": "road.arterial", "elementType": "labels.text.fill", "stylers": [{ "color": "#757575" }] },
+      { "featureType": "road.highway", "elementType": "geometry", "stylers": [{ "color": "#dadada" }] },
+      { "featureType": "road.highway", "elementType": "labels.text.fill", "stylers": [{ "color": "#616161" }] },
+      { "featureType": "road.local", "elementType": "labels.text.fill", "stylers": [{ "color": "#9e9e9e" }] },
+      { "featureType": "transit.line", "elementType": "geometry", "stylers": [{ "color": "#e5e5e5" }] },
+      { "featureType": "transit.station", "elementType": "geometry", "stylers": [{ "color": "#eeeeee" }] },
+      { "featureType": "water", "elementType": "geometry", "stylers": [{ "color": "#c9c9c9" }] },
+      { "featureType": "water", "elementType": "labels.text.fill", "stylers": [{ "color": "#9e9e9e" }] }
+    ];
+
+    function initMap() {
+      const center = { lat: -33.8688, lng: 151.2093 };
+      const map = new google.maps.Map(document.getElementById("map"), {
+        zoom: 5,
+        center: center,
+        styles: mapStyle
+      });
+
+      const coaches = [
+        { name: "Jamie", lat: -37.8136, lng: 144.9631, type: "In-Person", specialty: "Strength" },
+        { name: "Taylor", lat: -33.8688, lng: 151.2093, type: "Online", specialty: "Mobility" },
+        { name: "Alex", lat: -27.4698, lng: 153.0251, type: "In-Person", specialty: "HIIT" }
+      ];
+
+      coaches.forEach(coach => {
+        const marker = new google.maps.Marker({
+          position: { lat: coach.lat, lng: coach.lng },
+          map: map,
+          title: coach.name
+        });
+
+        const info = new google.maps.InfoWindow({
+          content: `<strong>${coach.name}</strong><br>${coach.specialty}<br>${coach.type}`
+        });
+
+        marker.addListener("click", () => {
+          info.open(map, marker);
+        });
+      });
+    }
+  </script>
+
+  <script async
+    src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_API_KEY&callback=initMap">
+  </script>
+
+</body>
+</html>
