--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     }
 
     .filters {
-      background: #ffffff;
+      background: #fbf9f8;
       padding: 20px;
       display: flex;
       flex-wrap: wrap;
@@ -58,7 +58,7 @@
 
     .featured {
       width: 22%;
-      background: #ffffff;
+      background: #fbf9f8;
       overflow-y: auto;
       border-right: 1px solid #eee;
       padding: 20px;
@@ -69,7 +69,7 @@
     }
 
     .coach-card {
-      background: #fdfdfd;
+      background: #fbf9f8;
       border-radius: 10px;
       box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
       padding: 15px;
@@ -80,9 +80,12 @@
       flex-grow: 1;
     }
 
-    .features, .testimonial, .signup-form, footer {
+    .features,
+    .testimonial,
+    .signup-form,
+    footer {
+      background: #fbf9f8;
       padding: 40px 20px;
-      background: #ffffff;
       text-align: center;
     }
 
@@ -119,7 +122,6 @@
     }
 
     footer {
-      background: #fbf9f8;
       font-size: 0.9em;
       color: #666;
     }
@@ -143,7 +145,6 @@
   </style>
 </head>
 <body>
-
   <header>
     <img src="logo.png" alt="HAFC Logo" />
   </header>
@@ -168,7 +169,6 @@
       <option value="in-person">In-Person</option>
     </select>
   </div>
-
   <div class="main-container">
     <div class="featured">
       <h3>Featured Coaches</h3>
@@ -178,7 +178,6 @@
     </div>
     <div id="map"></div>
   </div>
-
   <section class="features">
     <h2>Why Coaches Love HAFC</h2>
     <div class="feature-boxes">
@@ -214,7 +213,6 @@
   <footer>
     &copy; 2025 HAFC. All rights reserved.
   </footer>
-
   <script>
     const mapStyle = [
       { "elementType": "geometry", "stylers": [{ "color": "#f5f5f5" }] },
@@ -285,6 +283,5 @@
   </script>
 
   <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAWxrse2bAtAkZdXOhJN8xpufWmQgjs8m8&callback=initMap"></script>
-
 </body>
 </html>
